--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ streamlit>=1.28.0
 torch>=2.0.0
 transformers>=4.30.0
 scikit-learn>=1.2.0
-spacy>=3.5.0
-negspacy>=1.0.5
+spacy>=3.5.0,<4.0.0
+negspacy==1.0.4  
 joblib>=1.2.0
 numpy>=1.24.0
 gdown>=4.6.0
